@@ -87,7 +87,9 @@ music, this is doubly important: musicians have a limited amount of
 attention. The less attention they need for reading, the more they can
 focus on playing itself.  In other words, better typography translates
 to better performances.
-<p>
+
+
+<p align=right>
 
 Next: <a href=software.html>What's wrong with software</a>, or how
 Finale is not the end-all of music software.
